---
title: Système de Gestion de Parking - Diagramme de Classes UML
---
%%{init: {'theme':'neutral'}}%%
classDiagram
    note "Architecture orientée objet pour la gestion d'un parking avec persistance CSV"
    
    class Vehicule {
        <<abstract>>
        +Immatriculation: string
        -HeureEntree : DateTime
        -HeureSortie : DateTime
        -Frais : double
        +Sortir() void
    }
    
    class Voiture {
        +Voiture(immatriculation : string, heureEntree : DateTime)
    }
    
    class Moto {
        +Moto(immatriculation : string, heureEntree : DateTime)
    }
    
    class Parking {
        -CAPACITE_MAX : int
        -vehicules : List~Vehicule~
        -FichierCSV : string
        -gainTotal : double
        -FichierGains : string
        +Vehicules : List~Vehicule~
        +EstPlein : bool
        +AjouterVehicule(vehicule : Vehicule) bool
        +SauvegarderVehicules() void
        +ChargerVehicules() void
        +RetirerVehicule(vehicule : Vehicule) void
        +PlacesDisponibles() int
        +CalculerGainsTotal() double
        -SauvegarderGains() void
        +ChargerGains() void
    }
    
    %% Relations d'héritage
    Vehicule <|-- Voiture : hérite
    Vehicule <|-- Moto : hérite
    
    %% Relation de composition
    Parking "1" o-- "0..50" Vehicule : contient
    
    %% Notes explicatives
    note for Vehicule "Classe abstraite de base\nDéfinit les propriétés communes:\n- Immatriculation\n- Heures d'entrée/sortie\n- Calcul des frais (10€ voiture, 5€ moto)"
    
    note for Voiture "Véhicule de type voiture\nTarif: 10€ de stationnement"
    
    note for Moto "Véhicule de type moto\nTarif réduit: 5€ de stationnement"
    
    note for Parking "Gestionnaire principal du parking:\n- Capacité maximale: 50 places\n- Persistance CSV des véhicules et gains\n- Suivi des gains journaliers\n- Gestion ajout/retrait véhicules"
    
    %% Styles personnalisés
    class Vehicule:::abstractClass
    class Voiture:::concreteVehicleClass
    class Moto:::concreteVehicleClass
    class Parking:::managerClass
    
    classDef abstractClass fill:#ffe4e1,stroke:#dc143c,stroke-width:3px,color:#000,font-weight:bold
    classDef concreteVehicleClass fill:#e1f5fe,stroke:#01579b,stroke-width:2px,color:#000
    classDef managerClass fill:#fff9c4,stroke:#f57f17,stroke-width:3px,color:#000,font-weight:bold
